re PR target/48774 (gcc-4.6.0 optimization regression on x86_64-unknown-linux-gnu)

PR target/48774
	* config/i386/i386.c (ix86_match_ccmode): For CC{A,C,O,S}mode
	only succeed if req_mode is the same as set_mode.

	* gcc.dg/pr48774.c: New test.

From-SVN: r173302